--- a/trunk/WP8jukeboxAPRv7/WP8jukebox/DetailsPage.xaml
+++ b/trunk/WP8jukeboxAPRv7/WP8jukebox/DetailsPage.xaml
@@ -23,16 +23,21 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="UJUKEBOX" Style="{StaticResource PhoneTextNormalStyle}" Height="52" Foreground="#FFEE1515"/>
+            <TextBlock Text="UJUKEBOX" Style="{StaticResource PhoneTextNormalStyle}" Foreground="#FFEE1515"/>
             <TextBlock Text="{Binding}" x:Name="textBox1" Style="{StaticResource PhoneTextNormalStyle}" Foreground="#FFF5F9A7" FontSize="36"/>
 
-            <TextBlock Text="Track Details" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" Height="125"/>
+            <TextBlock Text="Track Details" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
+
+       
+         
+
+
 
         <!--ContentPanel contains details text. Place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
 
-            <StackPanel x:Name="MainPanel" Grid.Row="0" Margin="12,17,0,28" >
+            <StackPanel x:Name="MainPanel" Grid.Row="0" Margin="12,-22,0,28" >
                 <TextBlock Text="Title:" Margin="9,0,0,0" Style="{StaticResource PhoneTextLargeStyle}" Height="59"  FontSize="24" />
                 <TextBlock Text="{Binding LineOne}" Margin="9,-30,0,0" Style="{StaticResource PhoneTextLargeStyle}" Height="59" FontSize="36" Foreground="#FF0AF5F5"/>
 
