--- a/trunk/WP8jukeboxAPRv7/WP8jukebox/PlaylistPage.xaml
+++ b/trunk/WP8jukeboxAPRv7/WP8jukebox/PlaylistPage.xaml
@@ -49,7 +49,7 @@
 
         <!--ContentPanel contains LongListSelector and LongListSelector ItemTemplate. Place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <phone:LongListSelector x:Name="MainLongListSelector" Margin="0,0,-12,0" ItemsSource="{Binding Items3}" SelectionChanged="MainLongListSelector_SelectionChanged">
+            <phone:LongListSelector x:Name="MainLongListSelector" Margin="0,-22,-12,0" ItemsSource="{Binding Items3}" SelectionChanged="MainLongListSelector_SelectionChanged" Height="581" VerticalAlignment="Bottom">
                 <phone:LongListSelector.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Margin="0,0,0,0">
